Replaced List.getFirst() with get(0) for java 17 compatibility